samples/_failures_safe/1761092903_7289e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53bbcf5c.c: In function ‘transform_bounds’:
./samples/SAFE/__tmp_53bbcf5c.c:129: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_53bbcf5c.c:128:9: error: expected declaration or statement at end of input
  128 |         if
      |         ^~
./samples/SAFE/__tmp_53bbcf5c.c:128:9: error: expected declaration or statement at end of input
